--- a/src/App.css
+++ b/src/App.css
@@ -18,16 +18,16 @@
 #container{
     background-color: rgba(0, 0, 0, 0.623);
     position: absolute;
-    top: 10%;
+    top: 2%;
     left: 10%;
- 
+    bottom: 2%;
     right: 10%;
     border-radius: 20px;
-    padding: 57px 40px 56px 40px;    
+    padding: 28px 15px 1px 10px;  
     justify-content: space-between;
     display: flex;
     flex-direction: column;
-    height: 500px;
+    height: 600px;
 
 }
 #temp-panel{
@@ -35,9 +35,10 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
+    font-size: 12px;
 }
 #temp-panel h1{
-    font-size: 80px;
+    font-size: 60px;
 }
 
 
@@ -48,24 +49,27 @@
 }
 
 #city-name{
-        font-size: 30px;
+        font-size: 25px;
 }
 #city-section{
     display: flex;
     align-items: center;
 }
 
-#days div{
+.days div{
     border: 1px solid white;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     align-items: center;
     flex-direction: column;
     cursor: pointer;
     margin: 10px;
+    background-color: #000000de;
+
+    font-size: 12px;
 }
-#days {
+.days {
     display: flex;
     justify-content: center;
 }
@@ -73,6 +77,7 @@
 #search-box{
     display: flex;
     justify-content: center;
+    
 }
 #search-box input{
     background-color: transparent;
@@ -108,12 +113,9 @@
 }
 
 #user-loc-icon{
-    width:20px;
+    width:18px;
     filter: invert();
-    position: absolute;
-    right: 50px;
-    top: 14px;
-    cursor: pointer;
+    margin: 0px 5px;
 }
 
 
@@ -144,7 +146,43 @@ select {
 }
 #down{
     position: absolute;
-    bottom: 20px;
     left: 0px;
     right: 0px;
+    bottom: 25px;
+  
+}
+::-webkit-scrollbar {
+ display: none;
+}
+.days{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding: 0px 0px;align-items: center;
+   justify-content: flex-start;
+}
+.days div{
+    text-align: center;
+}
+.forcast-selector{
+    display: flex;
+}
+.forcast-selector p{
+    margin: 0px 10px;
+    cursor: pointer;
+}
+
+
+
+/* ------------Media Quaries------- */
+
+@media (min-width:100px)and (max-width:500px) {
+    #container{
+        padding:25px 20px 0px 8px;
+    }
+     small{
+        font-size: 10px;
+    }
+    #city-name{
+        font-size: 20px;
+    }
 }
