--- a/src/App.css
+++ b/src/App.css
@@ -19,15 +19,15 @@
     background-color: rgba(0, 0, 0, 0.623);
     position: absolute;
     top: 2%;
-    left: 10%;
+    left: 5%;
     bottom: 2%;
-    right: 10%;
+    right: 5%;
     border-radius: 20px;
     padding: 28px 15px 1px 10px;  
     justify-content: space-between;
     display: flex;
     flex-direction: column;
-    height: 600px;
+    height:630px;
 
 }
 #temp-panel{
@@ -77,7 +77,8 @@
 #search-box{
     display: flex;
     justify-content: center;
-    
+    margin-top: 15px;
+
 }
 #search-box input{
     background-color: transparent;
@@ -144,13 +145,7 @@ select {
     border-radius: 5px;
     cursor: pointer;
 }
-#down{
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    bottom: 25px;
-  
-}
+
 ::-webkit-scrollbar {
  display: none;
 }
@@ -171,18 +166,37 @@ select {
     cursor: pointer;
 }
 
-
+#list-temp-data{
+    list-style:none;
+    text-align: center;
+    
+}
+#list-temp-data li{
+    margin: 2px;
+}
+/* Loader */
+#loader{
+   margin: 0% auto;
+}
 
 /* ------------Media Quaries------- */
 
 @media (min-width:100px)and (max-width:500px) {
     #container{
         padding:25px 20px 0px 8px;
+       height: 650px;
+       top: 1%;
     }
      small{
         font-size: 10px;
     }
     #city-name{
         font-size: 20px;
+    }
+    #down{
+        position: absolute;
+        bottom: 27px;
+        left: 0px;
+        right: 0px;
     }
 }
